[gd_scene load_steps=10 format=2]

[ext_resource path="res://textures/ui_dialog_window.png" type="Texture" id=1]
[ext_resource path="res://scripts/SpeechContainer.gd" type="Script" id=2]
[ext_resource path="res://textures/ui_mayor_photo.png" type="Texture" id=4]
[ext_resource path="res://textures/ui_miner_photo.png" type="Texture" id=5]
[ext_resource path="res://textures/ui_dialog_arrow.png" type="Texture" id=6]
[ext_resource path="res://scenes/change_dialogue_option.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/confirm_dialogue_option.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/mayor_talk.wav" type="AudioStream" id=9]
[ext_resource path="res://fonts/pixel-font.tres" type="DynamicFont" id=10]

[node name="SpeechContainer" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MayorControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -32.0
margin_right = -128.0
margin_bottom = -32.0

[node name="MayorImage" type="TextureRect" parent="MayorControl"]
anchor_left = 0.023
anchor_top = 0.141
anchor_right = 0.23
anchor_bottom = 0.937
margin_left = 0.112
margin_top = -0.0240002
margin_right = 0.119999
margin_bottom = 0.0319977
texture = ExtResource( 4 )

[node name="MayerLabel" type="Label" parent="MayorControl"]
margin_left = 71.0
margin_top = 5.0
margin_right = 331.0
margin_bottom = 50.0
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_fonts/font = ExtResource( 10 )
text = "MAYOR OF BRNO
"

[node name="MayorText" type="Label" parent="MayorControl"]
anchor_left = 0.287
anchor_top = 0.25
anchor_right = 0.973
anchor_bottom = 0.875
margin_left = -2.472
margin_right = 418.912
margin_bottom = 103.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_fonts/font = ExtResource( 10 )
text = "It's quite simple, really. Shut the fuck up"
autowrap = true

[node name="MayorTextTimer" type="Timer" parent="MayorControl/MayorText"]
wait_time = 0.05
autostart = true

[node name="ArrowNext" type="TextureRect" parent="MayorControl"]
visible = false
margin_left = 246.0
margin_top = 53.0
margin_right = 252.0
margin_bottom = 59.0
texture = ExtResource( 6 )

[node name="MinerControl" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -32.0
margin_right = -128.0
margin_bottom = -32.0

[node name="MinerImage" type="TextureRect" parent="MinerControl"]
anchor_left = 0.023
anchor_top = 0.141
anchor_right = 0.23
anchor_bottom = 0.937
margin_left = -0.888
margin_top = -5.024
margin_right = 1.12
margin_bottom = -3.968
texture = ExtResource( 5 )

[node name="MinerLabel" type="Label" parent="MinerControl"]
anchor_left = 0.277
anchor_top = 0.078
anchor_right = 0.98
anchor_bottom = 0.297
margin_left = 0.0879974
margin_top = 0.0079999
margin_right = 0.119995
margin_bottom = -0.00800133
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_fonts/font = ExtResource( 10 )
text = "YOU"

[node name="MinerText" type="Label" parent="MinerControl"]
anchor_left = 0.287
anchor_top = 0.25
anchor_right = 0.973
anchor_bottom = 0.875
margin_left = -1.472
margin_right = 419.912
margin_bottom = 63.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_fonts/font = ExtResource( 10 )
text = ". . ."

[node name="HowButton" type="ToolButton" parent="MinerControl"]
anchor_left = 0.326
anchor_top = 0.843
anchor_right = 0.326
anchor_bottom = 0.843
margin_left = -11.456
margin_top = -4.95201
margin_right = 64.544
margin_bottom = 28.048
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_fonts/font = ExtResource( 10 )
text = "How?"
icon = ExtResource( 6 )

[node name="KButton" type="ToolButton" parent="MinerControl"]
anchor_left = 0.569
anchor_top = 0.843
anchor_right = 0.569
anchor_bottom = 0.843
margin_left = -14.664
margin_top = -4.95201
margin_right = 82.336
margin_bottom = 28.048
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_fonts/font = ExtResource( 10 )
text = "K.    "
icon = ExtResource( 6 )

[node name="NehButton" type="ToolButton" parent="MinerControl"]
anchor_left = 0.815
anchor_top = 0.843
anchor_right = 0.815
anchor_bottom = 0.843
margin_left = -14.64
margin_top = -4.95201
margin_right = 82.36
margin_bottom = 28.048
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Neh.  "
icon = ExtResource( 6 )

[node name="ChangeSpeechTimer" type="Timer" parent="."]
one_shot = true

[node name="ChangeDialogOption" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Confirm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="MajorTalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0

[connection signal="mayor_intro_text_finished" from="." to="." method="_on_SpeechContainer_mayor_intro_text_finished"]
[connection signal="mayor_tut_1_finished" from="." to="." method="_on_SpeechContainer_mayor_tut_1_finished"]
[connection signal="mayor_tut_2_finished" from="." to="." method="_on_SpeechContainer_mayor_tut_2_finished"]
[connection signal="mayor_tut_3_finished" from="." to="." method="_on_SpeechContainer_mayor_tut_3_finished"]
[connection signal="mayor_tut_4_finished" from="." to="." method="_on_SpeechContainer_mayor_tut_4_finished"]
[connection signal="timeout" from="MayorControl/MayorText/MayorTextTimer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="MinerControl/HowButton" to="." method="_on_HowButton_button_down"]
[connection signal="button_down" from="MinerControl/KButton" to="." method="_on_KButton_button_down"]
[connection signal="button_down" from="MinerControl/NehButton" to="." method="_on_NehButton_button_down"]
[connection signal="timeout" from="ChangeSpeechTimer" to="." method="_on_ChangeSpeechTimer_timeout"]
